--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-pandas>=2.0.0
-numpy>=1.24.0
-sqlalchemy>=2.0.0
-mysql-connector-python>=8.0.0
-requests>=2.31.0
-tqdm>=4.66.0
-polars>=0.20.0
-pyarrow>=14.0.0
-beautifulsoup4>=4.12.0
+pandas
+numpy
+sqlalchemy
+mysql-connector-python
+requests
+tqdm
+polars
+pyarrow
+beautifulsoup4
 jupyter>=1.0.0
 ipykernel>=6.0.0 
-requests
+pytz
